--- a/en/惡/惡.15606.wikitext
+++ b/en/惡/惡.15606.wikitext
@@ -4,7 +4,7 @@
 [[Category:CJKV characters simplified differently in Japan and China|惡0]]
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=08|sn=12|four=1033<sub>1</sub>|canj=一一心 (MMP)}}
+{{Han char|rn=61|rad=心|as=08|sn=12|four=1033<sub>1</sub>|canj=一一心 (MMP)|ids=⿱[[亞]][[心]]}}
 
 # [[evil]], [[wicked]], [[mean]], [[bad]], [[foul]]
 
