--- a/en/旧/旧.16911.wikitext
+++ b/en/旧/旧.16911.wikitext
@@ -5,10 +5,10 @@
 ===Etymology===
 {{Han simp|舊}} (removal of 萑 from 𦾔, where 旧 is another writing of 臼)
 
-In current form, {{Han compound|〡|t1=one|日|t2=day}}, representing the day before today (the past)
+In current form, {{Han compound|丨|t1=one|日|t2=day}}, representing the day before today (the past)
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=01|sn=5|four=|canj=中日 (LA)|ids=⿰[[〡]][[日]]}}
+{{Han char|rn=72|rad=日|as=01|sn=5|four=|canj=中日 (LA)|ids=⿰[[丨]][[日]]}}
 
 # [[old]], [[ancient]]
 # [[former]], [[past]]
