--- a/en/昌/昌.16948.wikitext
+++ b/en/昌/昌.16948.wikitext
@@ -28,7 +28,7 @@
 # {{defn|lang=ja|sort=日04}}
 
 ====Readings====
-* {{ja-readings|on=[[しょう]] (shō)|kun=[[さかん]] (sakan)}}
+* {{ja-readings|on=[[しょう]] (shō)|kun=[[さかん]] (sakan)|nanori=[[まさ]] (masa)}}
 
 ----
 
