--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -130,6 +130,7 @@ From {{etyl|la|en}} {{term|icon|lang=la}}, from {{etyl|grc|en}} {{term|εἰκώ
 * Jèrriais: {{tø|roa-jer|icône}}
 * Polish: {{t+|pl|ikona|f}}, {{t-|pl|ikonka|f}}
 * Portuguese: {{t+|pt|ícone|m}}
+* Romanian: {{t|ro|iconiță|f}}
 * Russian: {{t+|ru|иконка|f|tr=ikónka}}
 * Serbo-Croatian:
 *: Cyrillic: {{t-|sh|икона|f|sc=Cyrl}}, {{t-|sh|иконица|f|sc=Cyrl}}
