--- a/en/昭/昭.16981.wikitext
+++ b/en/昭/昭.16981.wikitext
@@ -31,7 +31,7 @@
 # {{defn|lang=ja|sort=日05}}
 
 ====Readings====
-* {{ja-readings|on=[[しょう]] (shō)|kun=[[あきらか]] (akiraka)}}
+* {{ja-readings|on=[[しょう]] (shō)|kun=[[あきらか]] (akiraka)|nanori=[[あき]] (aki)}}
 
 ===Proper noun===
 {{ja-pos|k|proper|hira=あきら|rom=Akira}}
