--- a/en/c/cling.6835.wikitext
+++ b/en/c/cling.6835.wikitext
@@ -53,7 +53,7 @@ From {{etyl|ang|en}} {{term|clingan||to adhere|lang=ang}}; akin to {{etyl|da|-}}
 * German: [[haften]], [[klammern]]
 * Indonesian: {{t+|id|sangkut|alt=menyangkut}}, {{t+|id|sangkut|alt=menyangkutkan}}, {{t+|id|gantung|alt=bergantung}}, {{t+|id|gantung|alt=menggantung}}, {{t+|id|gantung|alt=menggantungkan}}
 {{trans-mid}}
-* Italian: [[aggrapparsi]] <ref>''Oxford-Paravia Concise - Dizionario Inglese-Italiano e Italiano-Inglese (in collaborazione con Oxford University Press)''. Edited by Maria Cristina Bareggi. Torino: Paravia, 2003. [[W:Wikipedia:book sources| ISBN 8839551107]]. [http://www.oxfordparavia.it/ Online version]</ref>, {{t+|it|abbarbicarsi}}
+* Italian: [[aggrapparsi]] <ref>''Oxford-Paravia Concise - Dizionario Inglese-Italiano e Italiano-Inglese (in collaborazione con Oxford University Press)''. Edited by Maria Cristina Bareggi. Torino: Paravia, 2003. [[W:Wikipedia:book sources| ISBN 8839551107]]. [http://www.oxfordparavia.it/ Online version]</ref>, {{t+|it|abbarbicarsi}}, {{t|it|appiccicarsi}}
 * Japanese: {{t+|ja|掛ける|tr=かける, kakeru}},  {{t-|ja|ぶら下がる|tr=ぶらさがる, burasagaru}} {{qualifier|intransitive}},  {{t-|ja|ぶら下げる|tr=ぶらさげる, burasageru}} {{qualifier|transitive}}
 * Maori: {{t|mi|whakaawhiawhi}}
 * Norwegian: {{t-|no|klenge}}
