--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -15,6 +15,9 @@ From {{etyl|enm|en}} {{term|finden|lang=enm}}, from {{etyl|ang|en}} {{term|finda
 {{en-verb|finds|finding|'''[[found]]''' or '''[[fand]]''' {{qualifier|dialectal}}|'''[[found]]''' or {{qualifier|archaic}} '''[[founden]]'''}}
 
 # {{context|transitive|lang=en}} To [[encounter]], to [[discover]] something [[search]]ed for.
+#*{{quote-book|year=1898|author={{w|Winston Churchill (novelist)|Winston Churchill}}
+|title={{w|The Celebrity}}|chapter=2
+|passage=I had occasion […] to make a somewhat long business trip to Chicago, and on my return […] I '''found''' Farrar awaiting me in the railway station. He smiled his wonted fraction by way of greeting, […], and finally leading me to his buggy, turned and drove out of town.}}
 #*{{quote-book|year=1918|author={{w|W. B. Maxwell}}|chapter=10
 |title=[http://openlibrary.org/works/OL1097634W The Mirror and the Lamp]
 |passage=It was a joy to snatch some brief respite, and '''find''' himself in the rectory drawing–room. Listening here was as pleasant as talking; just to watch was pleasant.}}
