--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -76,6 +76,7 @@ From {{etyl|gmh|en}} {{term|spalden|lang=gmh}}, or {{etyl|non|en}} {{term|spald|
 {{en-noun}}
 
 # {{context|dialect|Northern England|Scotland|lang=en}} A thin piece of wood or metal; a splinter.
+# {{context|metalworking|lang=en}} [[spelter]]
 
 ====Verb====
 {{en-verb}}
