--- a/en/昌/昌.16948.wikitext
+++ b/en/昌/昌.16948.wikitext
@@ -29,9 +29,9 @@
 
 ====Readings====
 * {{ja-readings|on=[[しょう]] (shō)}}
-* {{kun=[[さかん]] (sakan)}}
-* {{nanori=[[まさ]] (masa)}}
-* {{nanori=[[あき]] (aki)}}
+* {{ja-readings|kun=[[さかん]] (sakan)}}
+* {{ja-readings|nanori=[[まさ]] (masa)}}
+* {{ja-readings|nanori=[[あき]] (aki)}}
 
 ----
 
