--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -16,29 +16,27 @@ From {{etyl|enm|en}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang|en}} {{
 [[File:David Lynch -microphone -10Aug2007-2p.jpg|thumb|right|[[w:David Lynch|David Lynch]] speaks before a group.]]
 
 # {{context|intransitive|lang=en}} To [[communicate]] with one's [[voice]], to [[say]] [[word]]s [[out loud]].
-#: ''I was so surprised I couldn't '''speak'''.''
-#: ''You're '''speaking''' too fast.''
+#*{{quote-book|year=1918|author={{w|W. B. Maxwell}}|chapter=13
+|title=[http://openlibrary.org/works/OL1097634W The Mirror and the Lamp]
+|passage=And Vickers launched forth into a tirade very different from his platform utterances. He '''spoke''' with extreme contempt of the dense stupidity exhibited on all occasions by the working classes. He said that if you wanted to do anything for them, you must rule them, not pamper them.}}
+#: {{usex|lang=en|I was so surprised I couldn't '''speak'''.&nbsp;&nbsp; You're '''speaking''' too fast.}}
 # {{context|intransitive|lang=en}} To have a [[conversation]].
-#: ''It's been ages since we've '''spoken'''.''
+#: {{usex|lang=en|It's been ages since we've '''spoken'''.}}
 # {{context|by extension|lang=en}} To [[communicate]] or [[converse]] by some means other than [[orally]], such as [[writing]] or [[facial]] [[expressions]].
-#: ''He '''spoke''' of it in his diary''
-#: '' '''Speak''' to me only with your eyes.''
-#: ''I just '''spoke''' with them on IRC.''
-#: ''Actions '''speak''' louder than words''.
+#: {{usex|lang=en|He '''spoke''' of it in his diary.&nbsp;&nbsp; '''Speak''' to me only with your eyes.&nbsp;&nbsp; I just '''spoke''' with them on IRC.&nbsp;&nbsp; Actions '''speak''' louder than words.}}
 # {{context|intransitive|lang=en}} To deliver a message to a group; to deliver a [[speech]].
-#: ''This evening I shall '''speak''' on the topic of correct English usage.''
+#: {{usex|lang=en|This evening I shall '''speak''' on the topic of correct English usage.}}
 # {{context|transitive|lang=en}} To be able to communicate in a [[language]].
-#: ''He '''speaks''' Mandarin fluently''.
+#: {{usex|lang=en|He '''speaks''' Mandarin fluently.}}
 # {{context|transitive|lang=en}} To [[utter]].
-#: ''I was so surprised that I couldn't '''speak''' a word.''
-#* '''1611''', ''[[w:Authorized King James Version|Authorized King James Version]]'' (Bible translation), [[w:Book of Jeremiah|Jeremiah]] 9:5:
+#* '''1611''', ''{{w|Authorized King James Version}}'' (Bible translation), [[w:Book of Jeremiah|Jeremiah]] 9:5:
 #*: And they will deceive every one his neighbour, and will not speak the truth: they have taught their tongue to '''speak''' lies, and weary themselves to commit iniquity.
+#: {{usex|lang=en|I was so surprised that I couldn't '''speak''' a word.}}
 # {{context|transitive|lang=en}} To [[communicate]] (some fact or feeling); to [[bespeak]], to [[indicate]].
-#* '''1851''', Herman Melville, ''Moby-Dick'':
+#* '''1851''', {{w|Herman Melville}}, ''{{w|Moby-Dick}}'':
 #*: There he sat, his very indifference '''speaking''' a nature in which there lurked no civilized hypocrisies and bland deceits.
 # {{context|informal|transitive|sometimes|humorous|lang=en}} To [[understand]] (as though it were a language).
-#: ''Sorry, I don't '''speak''' idiot.''
-#: ''So you can program in C. But do you '''speak''' C++?''
+#: {{usex|lang=en|Sorry, I don't '''speak''' idiot.&nbsp;&nbsp; So you can program in C. But do you '''speak''' C++?}}
 
 ====Synonyms====
 * [[articulate]], [[talk]], [[verbalize]]
