--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -58,6 +58,7 @@ From {{etyl|enm|en}} {{term|coate|lang=enm}}, {{term|cotte|lang=enm}}, from {{et
 * Khmer: {{t-|km|អាវធំ|tr=aav tʰom|sc=Khmr}}
 * Korean: {{t+|ko|코트|tr=koteu}}
 * Latin: {{t-|la|pallium|n}}
+* Latvian: {{t|lv|mētelis|m}}, {{t|lv|svārki|m-p}}
 * Luhya: {{tø|luy|kumuchosi}}
 * Macedonian: {{t-|mk|капут|m|tr=káput|sc=Cyrl}}
 * Malay: {{t-|ms|kot}}
