--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -22,6 +22,7 @@ From {{etyl|fro|en}} {{term|safran|lang=fro}}, from {{etyl|ML.|en}} {{term|safra
 ====Translations====
 {{trans-top|plant}}
 * Arabic: {{t-|ar|زَعْفَرَان}}
+*: Egyptian Arabic: {{tø|arz|زعفران|m|tr=zaʕfaraan|sc=Arab}}
 * Armenian: {{t-|hy|քրքում|tr=k’rk’um}}
 * Asturian: {{t-|ast|azafrán|m}}
 * Azeri: {{t+|az|zəfəran}}
