--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -300,7 +300,7 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 
 # {{n-g|lang=en|Used to indicate an event, period, or change in state occurring after a present time.}}
 #: ''Leave it to settle for about three months and, '''come''' Christmas time, you'll have a delicious concoctions to offer your guests.''
-#: '''''Come''' retirement, their Social Security may turn out to be a lot less than they counted on.}}
+#: '''''Come''' retirement, their Social Security may turn out to be a lot less than they counted on.''
 #* {{quote-news|date=November 10 2012|author=Amy Lawrence|title=Fulham's Mark Schwarzer saves late penalty in dramatic draw at Arsenal|newspaper=The Guardian|url=http://www.guardian.co.uk/football/2012/nov/10/arsenal-fulham-premier-league}}
 #*: '''Come''' the final whistle, Mikel Arteta lay flabbergasted on the turf.
 
