--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -209,11 +209,10 @@
 #*: "Sydney '''push''' have mobbed Macpherson,
 #*: Roll up, Dandaloo!"
 
-====Derived terms====
+=====Derived terms=====
 * [[give someone the push]]
 
-====Translations====
-{{rfc-level|Translations at L3+|lang=en}}
+=====Translations=====
 {{trans-top|short, directed application of force; act of pushing}}
 * Bengali: {{t|bn|ধাক্কা|tr=dhakka|sc=Beng}}
 * Dutch: {{t+|nl|duw|m}}
