--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -1,18 +1,20 @@
 ==English==
 
 ===Pronunciation===
-* {{enPR|fīt}}, {{IPA|/faɪt/|lang=en}}, {{X-SAMPA|/faIt/}}
+* {{enPR|fīt}}, {{IPA|/faɪt/|lang=en}}
 * {{audio|En-uk-fight.ogg|Audio (UK)}}
 * {{a|US|Canada}} {{IPA|[fʌɪt]|lang=en}}
 * {{audio|En-us-fight.ogg|Audio (US)}}
 * {{rhymes|aɪt}}
 
-[[Image:Adriaen_Brouwer,_Bauernrauferei_beim_Kartenspiel_(c._1630–1640).jpg|thumb|Fight ([[brawl]])]]
+[[File:Adriaen Brouwer, Bauernrauferei beim Kartenspiel (c. 1630–1640).jpg|thumb|Fight ([[brawl]])]]
 
-===Etymology 1===
+===Etymology===
 From {{etyl|enm|en}} {{term|fighten|lang=enm}}, from {{etyl|ang|en}} {{term|feohtan||to fight, combat, strive|lang=ang}}, from {{etyl|gem-pro|en}} {{term/t|gem-pro|*fehtaną||to comb, tease, shear}}, from {{etyl|ine-pro|en}} {{term/t|ine-pro|*peḱ-||to comb, shear}}. Cognate with {{etyl|sco|-}} {{term|fecht||to fight|lang=sco}}, {{etyl|fy|-}} {{term|fjochtsje|lang=fy}}, {{term|fjuchte||to fight|lang=fy}}, Dutch {{term|vechten||to fight|lang=nl}}, Low German {{term|fechten||to fight|lang=nds}}, German {{term|fechten||to fight, fence|lang=de}}, {{etyl|la|-}} {{term|pectō||comb, thrash|pos=verb|lang=la}}, {{etyl|sq|-}} {{term|pjek||to hit, strive, fight|lang=sq}}, {{etyl|grc|-}} {{term|πέκω||tr=pékō|comb or card wool|pos=verb|lang=grc}}. Related also to {{etyl|ang|-}} {{term|feht||wool, shaggy pelt, fleece|lang=ang}}.
 
-====Verb====
+The noun is from {{etyl|ang|en}} {{term|feoht|lang=ang}}, from the verb; compare Dutch {{term|gevecht|lang=nl}} and German {{term|Gefecht|lang=de}}.
+
+===Verb===
 {{en-verb|fights|fighting|fought|'''[[fought]]''' ''or'' {{qualifier|archaic}} '''[[foughten]]'''}}
 
 # {{context|intransitive|lang=en}} To [[contend]] in physical conflict, either singly or in war, battle etc.
@@ -37,10 +39,10 @@ From {{etyl|enm|en}} {{term|fighten|lang=enm}}, from {{etyl|ang|en}} {{term|feoh
 #: {{usex|lang=en|to '''fight''' cocks}}
 #: {{usex|lang=en|to '''fight''' one's ship}}
 
-=====Synonyms=====
+====Synonyms====
 * See also [[Wikisaurus:fight]]
 
-=====Derived terms=====
+====Derived terms====
 {{rel-top|Terms derived from the verb ''to fight''}}
 * [[fight back]]
 * [[fight fire with fire]]
@@ -50,7 +52,7 @@ From {{etyl|enm|en}} {{term|fighten|lang=enm}}, from {{etyl|ang|en}} {{term|feoh
 * [[fight tooth and nail]]
 {{rel-bottom}}
 
-=====Translations=====
+====Translations====
 {{trans-top|to contend in physical conflict}}
 * Afrikaans: {{t|af|stryd}}
 * Albanian: {{t|sq|luftën}}
@@ -246,10 +248,7 @@ From {{etyl|enm|en}} {{term|fighten|lang=enm}}, from {{etyl|ang|en}} {{term|feoh
 * {{ttbc|ro}}: {{t|ro|bătaie|f}}
 {{trans-bottom}}
 
-===Etymology 2===
-From {{etyl|ang|en}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[gevecht]]'', German ''[[Gefecht]]''.
-
-====Noun====
+===Noun===
 {{en-noun}}
 
 # An [[occasion]] of fighting.
@@ -270,10 +269,10 @@ From {{etyl|ang|en}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[ge
 # The [[will]] or [[ability]] to fight.
 #: {{usex|That little guy has a bit of '''fight''' in him after all.&nbsp;&nbsp; As soon as he saw the size of his opponent, all the '''fight''' went out of him.|lang=en}}
 
-=====Synonyms=====
+====Synonyms====
 * See also [[Wikisaurus:fight]]
 
-=====Derived terms=====
+====Derived terms====
 {{rel-top|Terms derived from the noun ''fight''}}
 * [[bullfight]]
 * [[bun fight]]
@@ -295,7 +294,7 @@ From {{etyl|ang|en}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[ge
 * [[thumb fight]]
 {{rel-bottom}}
 
-=====Translations=====
+====Translations====
 {{trans-top|occasion of fighting}}
 * Albanian: {{t|sq|luftë|f}}
 * Armenian: {{t|hy|կռիվ}}
@@ -469,7 +468,7 @@ From {{etyl|ang|en}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[ge
 * {{ttbc|te}}: {{t+|te|కొట్లాట|tr=koTlaaTa|sc=Telu}}, {{t|te|పోరాటం|tr=pOraaTaM|sc=Telu}}
 {{trans-bottom}}
 
-====Statistics====
+===Statistics===
 * {{rank|per|result|formed|763|fight|agree|sit|considerable}}
 
 [[Category:1000 English basic words]]
