--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -139,6 +139,8 @@ Supposed by some to derive from {{etyl|gd|en}} {{term|stob||to prick, to prod, t
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|бости}}
 *: Roman: {{t|sh|bosti}}
+* Sorbian:
+*: Lower Sorbian: {{t|dsb|štapaś}}
 * Spanish: {{t+|es|apuñalar}}, {{t+|es|acuchillar}}
 * Swedish: {{t+|sv|sticka}}
 * Tagalog: {{t|tl|saksak}}
