--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -62,7 +62,7 @@ From {{etyl|ang|en}} {{term|þunor|lang=ang}}, from {{etyl|gem-pro|en}} {{term/t
 *: Mandarin: {{t+|cmn|雷|tr=léi|sc=Hani}}, {{t|cmn|雷聲|sc=Hani}}, {{t+|cmn|雷声|tr=léishēng|sc=Hani}}
 * Czech: {{t+|cs|hrom|m}}, {{t|cs|zahřmění|n}}
 * Dalmatian: {{t|dlm|tun|m}}
-* Danish: {{t+|da|torden}}
+* Danish: {{t+|da|torden|c}}
 * Dutch: {{t+|nl|donder|m}}
 * Esperanto: {{t|eo|tondro}}
 * Estonian: {{t|et|kõu}}
@@ -73,10 +73,10 @@ From {{etyl|ang|en}} {{term|þunor|lang=ang}}, from {{etyl|gem-pro|en}} {{term/t
 * German: {{t+|de|Donner|m}}
 * Greek: {{t+|el|βροντή|f|tr=vrontí|sc=Grek}}
 * Haitian Creole: {{t|ht|loray}}
-* Hebrew: {{t+|he|רעם|tr=ra'am|sc=Hebr}}
+* Hebrew: {{t+|he|רעם|m|tr=ra'am|sc=Hebr}}
 * Hindi: {{t|hi|गरज|f|tr=garaj|sc=Deva}}, {{t|hi|गड़गड़ाहट|f|tr=gaṛgaṛāhaṭ|sc=Deva}}
 * Hungarian: {{t+|hu|mennydörgés}}, {{t|hu|égzengés}}
-* Icelandic: {{t+|is|þruma}}
+* Icelandic: {{t+|is|þruma|f}}
 * Indonesian: {{t+|id|guntur}}, {{t+|id|guruh}}
 * Irish: {{t+|ga|toirneach}}
 * Italian: {{t+|it|tuono|m}}
@@ -89,8 +89,8 @@ From {{etyl|ang|en}} {{term|þunor|lang=ang}}, from {{etyl|gem-pro|en}} {{term/t
 * Latin: {{t|la|tonus|m}}, {{t|la|tonitrus|m}}, {{t|la|tonitruum|n}}
 * Latvian: {{t|lv|pērkons|m}}
 * Lithuanian: {{t|lt|griaustinis}}
-{{trans-mid}}
 * Macedonian: {{t+|mk|гром|m|tr=grom}}
+{{trans-mid}}
 * Malay: {{t|ms|guruh}}, {{t|ms|guntur}}
 * Manx: {{t|gv|taarnagh}}
 * Maori: {{t|mi|whaitiri}}
@@ -118,7 +118,7 @@ From {{etyl|ang|en}} {{term|þunor|lang=ang}}, from {{etyl|gem-pro|en}} {{term/t
 * Slovene: {{t+|sl|grom|m}}, {{t|sl|grmenje|n}}
 * Spanish: {{t+|es|trueno|m}}
 * {{ttbc|sw}}: {{qualifier|nc 9/10}} {{t+|sw|radi}} ''''
-* Swedish: {{t+|sv|åska|c}}, (åsk){{t+|sv|smäll|c}}
+* Swedish: {{t+|sv|åska|c}}, (åsk) {{t+|sv|smäll|c}}
 * Tamil: {{t+|ta|இடி|tr=iṭi|sc=Taml}}
 * Taos: {{t|twf|nąłàcit’ə́otuna}}
 * Telugu: {{t+|te|ఉరుము|tr=urumu|sc=Telu}}
@@ -129,6 +129,7 @@ From {{etyl|ang|en}} {{term|þunor|lang=ang}}, from {{etyl|gem-pro|en}} {{term/t
 * Tuvan: {{t|tyv|диңмирээшкин|tr=diŋmireeškin}}
 * Ukrainian: {{t|uk|грім|m|tr=hrim|sc=Cyrl}}
 * Urdu: {{t|ur|گرج|tr=garaj|sc=ur-Arab}}, {{t|ur|گڑگڑاہٹ|tr=gaṛgaṛāhaṭ|sc=ur-Arab}}
+* Venetian: {{t+|vec|ton|m}}
 * Vietnamese: {{t+|vi|sấm}}, {{t+|vi|sét}}
 * Volapük: {{t|vo|töt}}
 * Welsh: {{t|cy|daranau}}
