--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -92,7 +92,7 @@
 * Polish: {{t+|pl|port|m}}
 * Portuguese: {{t+|pt|porto|m}}
 * Romanian: {{t|ro|port|n}}
-* Russian: {{t+|ru|порт|m|tr=port}}
+* Russian: {{t+|ru|порт|m|tr=port}}, {{t+|ru|га́вань|f|sc=Cyrl}}
 * Scottish Gaelic: {{t|gd|port|m}}, {{t|gd|cala|m}}, {{t|gd|acarsaid|f}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|лука|f}}
