--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -105,7 +105,7 @@
 * Swahili: {{t+|sw|bandari}}
 * Swedish: {{t+|sv|hamn|c}}
 * Tagalog: {{t|tl|port}}, {{t|tl|daungan}}
-* Tajik: {{t|tg|бандар|tr=bandar|sc=Cyrl}}, {{t|tg|бандаргоҳ|sc=Cyrl}}
+* Tajik: {{t|tg|бандар|tr=bandar|sc=Cyrl}}, {{t|tg|бандаргоҳ|sc=Cyrl}}, {{t|tg|порт|sc=Cyrl}}
 * Tamil: {{t|ta|றைமுகம்|tr=ṟaimukam|sc=Taml}}
 * Tatar: {{t|tt|порт|sc=Cyrl}}
 * Telugu: {{t|te|ఓడరేవు|tr=ōḍarēvu|sc=Telu}}
