--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -36,6 +36,7 @@ From {{etyl|he|en}} {{term|יִשְׂרָאֵל||Israel|lang=he|tr=yisra'él}}, 
 ====Derived terms====
 * [[Israeli]]
 * [[Israelite]]
+* [[Jewsrael]]
 
 ====Translations====
 {{trans-top|the state}}
