--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -24,6 +24,8 @@ From {{etyl|enm|en}} {{term|felen|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang|
 # {{context|transitive|lang=en}} To experience the [[consequence]]s of.
 #: {{usex|'''Feel''' my wrath!|lang=en}}
 # {{context|transitive|lang=en}} To [[think]], [[believe]], or have an [[impression]] concerning.
+#* Shakespeare
+#*: Garlands {{...}} which I '''feel''' / I am not worthy yet to wear.
 #* {{quote-book|year=1963|author={{w|Margery Allingham}}|title={{w|The China Governess}}
 |chapter=19|url=http://openlibrary.org/works/OL2004261W
 |passage=When Timothy and Julia hurried up the staircase to the bedroom floor, where a considerable commotion was taking place, Tim took Barry Leach with him. He had him gripped firmly by the arm, since he '''felt''' it was not safe to let him loose, and he had no immediate idea what to do with him.}}
@@ -40,8 +42,12 @@ From {{etyl|enm|en}} {{term|felen|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang|
 # {{context|copulative|lang=en}} To [[seem]] (through [[touch]] or otherwise).
 #: {{usex|It looks like wood, but it '''feels''' more like plastic.|lang=en}}
 #: {{usex|This is supposed to be a party, but it '''feels''' more like a funeral!|lang=en}}
-# {{context|intransitive|lang=en}} To [[sympathise]].
+# {{context|intransitive|lang=en}} To [[sympathise]]; to have the sensibilities moved or affected.
 #: {{usex|I '''feel''' for you and your plight.|lang=en}}
+#* Burke
+#*: [She] '''feels''' with the dignity of a Roman matron.
+#* Alexander Pope
+#*: who '''feel''' for all mankind
 # {{context|transitive|US|slang|lang=en}} To [[understand]].
 #: {{usex|I don't want you back here, ya '''feel''' me?|lang=en}}
 
