--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -19,7 +19,7 @@ From {{etyl|la|en}} {{term|i.e.|lang=la}}, an abbreviation of {{term|lang=la|id 
 * '''i.e.''' is used to [[explain]], [[clarify]] or [[rephrase]] a statement rather than listing options, in which case '''[[e.g.]]''' should be used.
 * Often confused with '''[[e.g.]]'''
 * American English prefers a comma after '''i.e.'''; in British English a comma does not follow '''i.e.''' [http://dictionary.reference.com/help/faq/language/g58.html]
-* Opinion is mixed about whether the abbreviation should be italicized, or whether there should be a separating non-breaking space as in '''i.&nbsp;e.'''. However, the [[wikipedia:AMA Manual of Style|AMA manual of style]] recommends to forgo italic on terms long since naturalized into English and not to separate abbreaviations (see [[wikipedia:Abbreviations|"Abbreviations" on wikipedia]]).
+* Opinion is mixed about whether the abbreviation should be italicized, or whether there should be a separating non-breaking space as in '''i.&nbsp;e.'''. However, the [[wikipedia:AMA Manual of Style|AMA manual of style]] recommends to forgo italic on terms long since naturalized into English and not to separate abbreviations (see [[wikipedia:Abbreviations|"Abbreviations" on wikipedia]]).
 * '''ie:''' is often found in current usage, and is perhaps now considered acceptable.
 i.e. differs from [[viz.]] in that what follows merely restates what was said in other words, rather than expanding upon what has already been said; and from e.g. in that completeness or near-completeness is suggested, rather than a small selection of examples.
 
