--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -141,13 +141,17 @@ From {{etyl|he|en}} {{term|יִשְׂרָאֵל||Israel|lang=he|tr=yisra'él}}, 
 * French: {{t+|fr|Israël|m}}
 * Hebrew: {{t+|he|ישראל|m|tr=yisra'el}}
 {{trans-mid}}
+* Judeo-Arabic: {{t|jrb|אסראיל|tr=ʾisrāʾīl}}
 * Spanish: {{t+|es|Israel|m}}
+* Yiddish: {{t|yi|ישׂראל|m|tr=yisroel|sc=Hebr}}
 {{trans-bottom}}
 
 {{trans-top|given name}}
 * Catalan: {{t+|ca|Israel|m}}
-{{trans-mid}}
 * Hebrew: {{t+|he|ישראל|m|tr=yisra'el}}
+{{trans-mid}}
+* Judeo-Arabic: {{t|jrb|אסראיל|m|tr=ʾisrāʾīl}}
+* Yiddish: {{t|yi|ישׂראל|m|tr=yisroel|sc=Hebr}}
 {{trans-bottom}}
 
 ====See also====
