--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -137,12 +137,12 @@ From {{etyl|he|en}} {{term|יִשְׂרָאֵל||Israel|lang=he|tr=yisra'él}}, 
 * Yiddish: {{t|yi|ישראל|alt=ישׂראל|tr=Yisroel}}
 {{trans-bottom}}
 
-{{trans-top|Biblical: name gven to Jacob}}
+{{trans-top|Biblical: name given to Jacob}}
 * Catalan: {{t+|ca|Israel|m}}
 * French: {{t+|fr|Israël|m}}
 * Hebrew: {{t+|he|ישראל|m|tr=yisra'el}}
 {{trans-mid}}
-* Judeo-Arabic: {{t|jrb|אסראיל|tr=ʾisrāʾīl}}
+* Judeo-Arabic: {{t|jrb|אסראיל|m|tr=ʾisrāʾīl}}
 * Spanish: {{t+|es|Israel|m}}
 * Yiddish: {{t|yi|ישׂראל|m|tr=yisroel|sc=Hebr}}
 {{trans-bottom}}
