--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -232,6 +232,7 @@ From {{etyl|enm|en}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang|en}} {{
 * French: {{t+|fr|parler}}
 * Galician: {{t+|gl|falar}}
 * German: {{t+|de|sprechen}}
+* Hebrew: {{t+|he|דיבר|tr=dibér}}
 * Italian: {{t+|it|parlare}}
 * Japanese: {{t+|ja|話す|tr=はなす, hanasu|sc=Jpan}}
 {{trans-mid}}
