--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -176,6 +176,7 @@ From {{etyl|fr|en}} {{term|France|lang=fr}}, {{etyl|fro|en}} {{term|France|lang=
 * Vietnamese: {{t+|vi|Pháp}}, {{t|vi|nước Pháp}}
 * Volapük: {{t+|vo|Fransän}}, {{qualifier|obsolete}} {{t|vo|Flent}}, {{qualifier|obsolete}} {{t|vo|Flentän}}
 * Võro: [[Prantsusmaa]]
+* Walloon: {{t+|wa|France|f}}
 * Welsh: {{t+|cy|Ffrainc|f}}
 * West Frisian: {{t+|fy|Frankryk}}
 * Yiddish: {{t|yi|פֿראַנקרײַך|n|tr=Frankraykh|sc=Hebr}}
