--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -11,7 +11,7 @@ From {{etyl|la|en}} {{term|Germania|lang=la}}; likely a [[w:Gaulish language|Gal
 * {{audio|en-us-Germany.ogg|Audio (US)}}
 
 ===Proper noun===
-{{en-proper noun}}; plural '''''[[Germanies]]''''' or '''''[[Germanys]]''')
+{{en-proper noun}} (plural '''''[[Germanies]]''''' or '''''[[Germanys]]''')
 
 # The country in Central Europe of which [[Berlin]] is the current and historical capital city. Current official name: [[Federal Republic of Germany]] ([[Bundesrepublik Deutschland]]).
 #* '''1996''', Paul Bookbinder, ''Weimar '''Germany''': the republic of the reasonable'' (ISBN 0719042879), page 90
