--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -337,6 +337,7 @@ From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|butere||butter|lang=ang}}, fro
 
 =====Translations=====
 {{trans-top-also|to spread butter on|spread|butter}}
+* Afrikaans: {{t+|af|botter}}, {{t|af|bebotter}}
 * Bulgarian: {{t|bg|намазвам с масло}}
 * Czech: {{qualifier|[[impf.]]}} {{t|cs|mazat máslem}}, {{t|cs|namazat máslem}}, {{qualifier|[[pf.]]}} {{t|cs|pomazat máslem}}
 * Danish: {{t|da|smøre}} brødet
