--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -23,7 +23,7 @@ From {{etyl|ang|en}} {{term/t|ang|plūme}}, from {{etyl|gem-pro|en}} {{term/t|ge
 # A [[raisin]], when used in a pudding or cake.
 # {{context|pejorative|lang=en}} A [[fool]], [[idiot]]
 # {{context|slang|usually in plural|lang=en}} A [[testicle]].
-# The edible, fleshy stone of ''Prunus mume'', an Asian fruit more closely related to the [[apricot]] than the plum, usually consumed pickled, dried, or as a juice or wine; [[ume]].
+# The edible, fleshy stone of {{taxlink|Prunus mume|species}}, an Asian fruit more closely related to the [[apricot]] than the plum, usually consumed pickled, dried, or as a juice or wine; [[ume]].
 # The tree which bears this fruit, ''Prunus mume''. See ''[[plum blossom]]''.
 
 =====Synonyms=====
