--- a/en/圱/圱.12979.wikitext
+++ b/en/圱/圱.12979.wikitext
@@ -11,14 +11,12 @@
 ----
 
 ==Mandarin==
-圱qiān/sú
-1. a field the size of three li.
-2. ancient character whose meaning is identical to 俗 and 阡
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[sú]] ([[su2]]), [[qiān]] ([[qian1]])|wg=ch'ang<sup>3</sup>, ch'ien<sup>1</sup>}}
+{{cmn-hanzi|pin=[[qiān]] ([[qian1]]), [[sú]] ([[su2]])|wg=ch'ien<sup>1</sup>, ch'ang<sup>3</sup>}}
 
-# {{defn|lang=cmn|sort=土03}}
+# a field the size of three li
+# ancient character whose meaning is identical to [[俗]] and [[阡]]
 
 [[fr:圱]]
 [[pl:圱]]
