--- a/en/圳/圳.12981.wikitext
+++ b/en/圳/圳.12981.wikitext
@@ -1,10 +1,10 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=03|sn=6|four=4210<sub>0</sub>|canj=土中中中 (GLLL)}}
+{{Han char|rn=32|rad=土|as=03|sn=6|four=4210<sub>0</sub>|canj=土中中中 (GLLL)|ids=⿰[[土]][[川]]}}
 
-# furrow in field, small drainage
-# drainage in field, brook beside field
+# [[furrow]]] in a field, small [[drainage]] in a field
+# [[brook]] beside a field
 
 ====References====
 * {{Han ref|kx=0224.150|dkj=04894|dj=0458.020|hdz=10420.030|uh=5733|ud=22323|bh=A660|bd=42592}}
