--- a/en/圴/圴.12982.wikitext
+++ b/en/圴/圴.12982.wikitext
@@ -10,6 +10,18 @@
 
 ----
 
+==Cantonese==
+
+===Hanzi===
+{{yue-hanzi|jyut=[[zoek3]]|y=jeuk3}}
+
+# {{defn|lang=yue|sort=土03}}
+
+====References====
+* [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 85]
+
+----
+
 ==Japanese==
 
 ===Kanji===
