--- a/en/圵/圵.12983.wikitext
+++ b/en/圵/圵.12983.wikitext
@@ -10,6 +10,18 @@
 
 ----
 
+==Cantonese==
+
+===Hanzi===
+{{yue-hanzi|jyut=[[joeng6]]|y=yeung6}}
+
+# {{defn|lang=yue|sort=土03}}
+
+====References====
+* [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 85]
+
+----
+
 ==Mandarin==
 
 ===Hanzi===
