--- a/en/圹/圹.12987.wikitext
+++ b/en/圹/圹.12987.wikitext
@@ -32,6 +32,18 @@
 ====Compounds====
 * [[圹穴]]
 
+----
+
+==Vietnamese==
+
+===Han character===
+{{vi-hantu|[[khoáng]]|rs=土03}}
+
+# {{defn|lang=vi|sort=土03}}
+
+====References====
+*[http://nomfoundation.org/common/nom_details.php?codepoint=5739 Nom Foundation]
+
 [[fr:圹]]
 [[mg:圹]]
 [[pl:圹]]
