--- a/en/圿/圿.12994.wikitext
+++ b/en/圿/圿.12994.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=04|sn=7|four=|canj=土人中中 (GOLL)}}
+{{Han char|rn=32|rad=土|as=04|sn=7|four=|canj=土人中中 (GOLL)|ids=⿰[[土]][[介]]}}
 
 # {{defn|Han|sort=土04}}
 
