--- a/en/圿/圿.12994.wikitext
+++ b/en/圿/圿.12994.wikitext
@@ -10,6 +10,18 @@
 
 ----
 
+==Cantonese==
+
+===Hanzi===
+{{yue-hanzi|jyut=[[git3]]|y=git3}}
+
+# {{defn|lang=yue|sort=土04}}
+
+====References====
+* [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 85]
+
+----
+
 ==Japanese==
 
 ===Kanji===
