--- a/en/坂/坂.12997.wikitext
+++ b/en/坂/坂.12997.wikitext
@@ -7,9 +7,10 @@
 {{Han compound|土|t1=mound|反|ls=psc|c1=s|c2=p}}
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=04|sn=7|four=|canj=土竹水 (GHE)}}
+{{Han char|rn=32|rad=土|as=04|sn=7|four=|canj=土竹水 (GHE)|ids=⿰[[土]][[反]]}}
 
 # [[slope]], [[hillside]]
+# [[inconvenient]] [[place]]s
 
 ====References====
 * {{Han ref|kx=0224.260|dkj=04910|dj=0459.140|hdz=10423.090|uh=5742|ud=22338}}
