--- a/en/坄/坄.12999.wikitext
+++ b/en/坄/坄.12999.wikitext
@@ -13,7 +13,7 @@
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[tóu]] ([[tou2]]), [[yùn]] ([[yun4]])|wg=t'ou<sup>2</sup>, yün<sup>4</sup>}}
+{{cmn-hanzi|pin=[[yì]] ([[yi4]])|wg=i<sup>4</sup>}}
 
 # {{defn|lang=cmn|sort=土04}}
 
