--- a/en/坄/坄.12999.wikitext
+++ b/en/坄/坄.12999.wikitext
@@ -1,12 +1,24 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=04|sn=7|four=|canj=土竹弓水 (GHNE)}}
+{{Han char|rn=32|rad=土|as=04|sn=7|four=|canj=土竹弓水 (GHNE)|ids=}}
 
 # {{defn|Han|sort=土04}}
 
 ====References====
 * {{Han ref|kx=0224.280|dkj=04913|dj=0459.170|hdz=10426.050|uh=5744|ud=22340}}
+
+----
+
+==Cantonese==
+
+===Hanzi===
+{{yue-hanzi|jyut=[[jik6]]|y=yik6}}
+
+# {{defn|lang=yue|sort=土04}}
+
+====References====
+* [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 86]
 
 ----
 
