--- a/en/坆/坆.13001.wikitext
+++ b/en/坆/坆.13001.wikitext
@@ -25,7 +25,7 @@
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[fén]] ([[fen2]])|wg=fen<sup>2</sup>}}
+{{cmn-hanzi|pin=[[méi]] ([[mei2]]), [[fén]] ([[fen2]])|wg=mei<sup>2</sup>, fen<sup>2</sup>}}
 
 # {{defn|lang=cmn|sort=土04}}
 
