--- a/en/坆/坆.13001.wikitext
+++ b/en/坆/坆.13001.wikitext
@@ -10,6 +10,15 @@
 
 ----
 
+==Cantonese==
+
+===Hanzi===
+{{yue-hanzi|jyut=[[fan4]|y=fan4}}
+
+# {{defn|lang=yue|sort=土04}}
+
+----
+
 ==Japanese==
 
 ===Kanji===
