--- a/en/坆/坆.13001.wikitext
+++ b/en/坆/坆.13001.wikitext
@@ -13,7 +13,7 @@
 ==Cantonese==
 
 ===Hanzi===
-{{yue-hanzi|jyut=[[fan4]|y=fan4}}
+{{yue-hanzi|jyut=[[fan4]]|y=fan4}}
 
 # {{defn|lang=yue|sort=土04}}
 
