--- a/en/坈/坈.13003.wikitext
+++ b/en/坈/坈.13003.wikitext
@@ -13,7 +13,7 @@
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[fáng]] ([[fang2]]), [[kēng]] ([[keng1]])|wg=fang<sup>2</sup>, k'eng<sup>1</sup>}}
+{{cmn-hanzi|pin=[[rǒng]] ([[rong3]]), [[kēng]] ([[keng1]])|wg=jung<sup>3</sup>, k'eng<sup>1</sup>}}
 
 # {{defn|lang=cmn|sort=土04}}
 
