--- a/en/坋/坋.13006.wikitext
+++ b/en/坋/坋.13006.wikitext
@@ -16,7 +16,7 @@
 ==Cantonese==
 
 ===Hanzi===
-{{yue-hanzi|jyut=|y=ban3}}
+{{yue-hanzi|jyut=[[ban3]], [[fan5]], [[fan6]]|y=ban3, fan5, fan6}}
 
 # {{defn|lang=yue|sort=土04}}
 
