--- a/en/坍/坍.13008.wikitext
+++ b/en/坍/坍.13008.wikitext
@@ -48,6 +48,18 @@
 
 # {{defn|lang=cmn|sort=土04}}
 
+----
+
+==Vietnamese==
+
+===Han character===
+{{vi-hantu|[[đàn]], [[than]]|rs=土04}}
+
+# {{defn|lang=vi|sort=土04}}
+
+====References====
+*[http://nomfoundation.org/common/nom_details.php?codepoint=574d Nom Foundation]
+
 [[fr:坍]]
 [[li:坍]]
 [[mg:坍]]
