--- a/en/坓/坓.13014.wikitext
+++ b/en/坓/坓.13014.wikitext
@@ -13,7 +13,7 @@
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[xíng]] ([[xing2]])|wg=hsing<sup>2</sup>}}
+{{cmn-hanzi|pin=[[jǐng]] ([[jing3]]), [[xíng]] ([[xing2]])|wg=ching<sup>3</sup>, hsing<sup>2</sup>}}
 
 # {{defn|lang=cmn|sort=土04}}
 
