--- a/en/坕/坕.13016.wikitext
+++ b/en/坕/坕.13016.wikitext
@@ -10,6 +10,18 @@
 
 ----
 
+==Cantonese==
+
+===Hanzi===
+{{yue-hanzi|jyut=[[ging1]]|y=ging1}}
+
+# {{defn|lang=yue|sort=土04}}
+
+====References====
+* [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 86]
+
+----
+
 ==Mandarin==
 
 ===Hanzi===
