--- a/en/坘/坘.13019.wikitext
+++ b/en/坘/坘.13019.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=04|sn=7|four=|canj=土一女一 (GMVM)}}
+{{Han char|rn=32|rad=土|as=04|sn=7|four=|canj=土一女一 (GMVM)|ids=⿰[[土]][[互]]}}
 
 # {{defn|Han|sort=土04}}
 
