--- a/en/坚/坚.13021.wikitext
+++ b/en/坚/坚.13021.wikitext
@@ -18,7 +18,7 @@
 ==Cantonese==
 
 ===Hanzi===
-{{yue-hanzi|jyut=|y=gin1|tra=堅}}
+{{yue-hanzi|jyut=[[gin1]]|y=gin1|tra=堅}}
 
 # {{defn|lang=yue|sort=土04}}
 
