--- a/en/坛/坛.13022.wikitext
+++ b/en/坛/坛.13022.wikitext
@@ -2,10 +2,10 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=04|sn=7|four=|canj=土一一戈 (GMMI)}}
+{{Han char|rn=32|rad=土|as=04|sn=7|four=|canj=土一一戈 (GMMI)|ids=⿰[[土]][[云]]}}
 
 # [[altar]]
-# arena, examination hall
+# [[arena]], [[examination]] [[hall]]
 
 ====References====
 * {{Han ref|kx=0226.101|hdz=10421.090|uh=575B|ud=22363}}
