--- a/en/坝/坝.13024.wikitext
+++ b/en/坝/坝.13024.wikitext
@@ -2,7 +2,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=04|sn=7|four=|canj=土月人 (GBO)}}
+{{Han char|rn=32|rad=土|as=04|sn=7|four=|canj=土月人 (GBO)|ids=⿰[[土]][[贝]]}}
 
 # [[embankment]]
 # [[dam]]
