--- a/en/坞/坞.13025.wikitext
+++ b/en/坞/坞.13025.wikitext
@@ -2,9 +2,9 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=04|sn=7|four=|canj=土心女一 (GPVM)}}
+{{Han char|rn=32|rad=土|as=04|sn=7|four=|canj=土心女一 (GPVM)|ids=⿰[[土]][[乌]]}}
 
-# entrenchment, bank, low wall
+# [[entrenchment]], [[bank]], [[low]] [[wall]]
 
 ====References====
 * {{Han ref|kx=0226.101|hdz=10426.020|uh=575E|ud=22366}}
