--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -93,6 +93,7 @@ From {{etyl|enm|en}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|cont
 
 {{trans-top|a charge of misconduct}}
 * Finnish: {{t|fi|syyte}}, {{t|fi|syytekohta}}
+* Irish: {{t|ga|scór|m}}
 {{trans-mid}}
 * Spanish: {{t+|es|punto|m}}, {{t+|es|cargo|m}}
 {{trans-bottom}}
