--- a/en/坟/坟.13026.wikitext
+++ b/en/坟/坟.13026.wikitext
@@ -32,6 +32,15 @@
 
 # {{defn|lang=cmn|sort=土04}}
 
+----
+
+==Vietnamese==
+
+===Han character===
+{{vi-hantu|[[vun]]|rs=土04}}
+
+# {{defn|lang=vi|sort=土04}}
+
 [[fr:坟]]
 [[mg:坟]]
 [[pl:坟]]
