--- a/en/坠/坠.13027.wikitext
+++ b/en/坠/坠.13027.wikitext
@@ -14,7 +14,7 @@
 ==Cantonese==
 
 ===Hanzi===
-{{yue-hanzi|jyut=|y=jui6|tra=墜}}
+{{yue-hanzi|jyut=[[zui6]]|y=jui6|tra=墜}}
 
 # {{defn|lang=yue|sort=土04}}
 
