--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -47,7 +47,7 @@
 * Interlingua: {{t|ia|Republica Chec}}
 * Irish: {{t|ga|Poblacht na Seice|f}}
 * Italian: {{t+|it|Repubblica Ceca|f}}
-* Japanese: {{t+|ja|チェコ|tr=Cheko}}, {{t|ja|チェコ共和国|tr=Cheko-kyōwakoku}}({{Jpan|ちぇこきょうわこく}})
+* Japanese: {{t+|ja|チェコ|tr=Cheko}}, {{t|ja|チェコ共和国|tr=ちぇこきょうわこく, Cheko-kyōwakoku}}
 * Jèrriais: {{t|roa-jer|Républyique Tchèque|f}}
 * Kazakh: {{t|kk|Чех Республикасы|tr=Čex Respublikası|sc=Cyrl}}
 * Khmer: {{t|km|សាធារណរដ្ឋឆែក|tr=sar thea rak nak roath chaek|sc=Khmr}}
